--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     <link rel="stylesheet" href="assests/css/style.css/">
 </head>
 <body>
-    <h1>Love Running</h1>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li> 
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Sign up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        main image
+    </section>
+    <section>
+        club ethos image
+    </section>
+    <section>
+        running loaction, distance and time
+    </section>
+    <footer>
+        social links
+
+    </footer>
 </body>
 </html>
