add hero image and animation for zoom

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Love running club for runners in dublin, Ireland">
     <meta name="keywords" content="love running, running club, dublin, Ireland">
     <title>Love Running</title>
-    <link rel="stylesheet" href="assests/css/style.css/">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
@@ -28,8 +28,8 @@
             </ul>
         </nav>
     </header>
-    <section>
-        main image
+    <section id="hero-outer">
+        <div id="hero-image"></div>
     </section>
     <section>
         club ethos image
