add club ethos main structure

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
             
         </div>
     </section>
-    <section>
-        club ethos image
+    <section id="club=ethos">
+        <h2>Why Love Running with us?</h2>
+        <div id="left-about">left</div>
+        <div id="right-about">right</div>
+        <div id="center-about">center</div>
     </section>
     <section>
         running loaction, distance and time
