--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </section>
     <section id="club ethos">
-        <h1>Why love running with us?</h1>
+        <h1 id="welcome">Why love running with us?</h1>
     <div id="left-about">
         <div class="left-about-heading">
             <h2>Feel Healthy</h2>
@@ -73,7 +73,13 @@
             </div>  
         </div>
         
-        <div id="center-about">center</div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg">
+
+                </div>
+            </div>
+        </div>
         <div>
             <h2></h2>
         </div>
